--- a/apicockpit/src/main/webapp/i18n/en/apiProject.json
+++ b/apicockpit/src/main/webapp/i18n/en/apiProject.json
@@ -2,18 +2,18 @@
     "apicockpitApp": {
         "apiProject": {
             "home": {
-                "title": "Api Projects",
-                "createLabel": "Create a new Api Project",
-                "createOrEditLabel": "Create or edit a Api Project"
+                "title": "Projects",
+                "createLabel": "New Project",
+                "createOrEditLabel": "Project"
             },
-            "created": "A new Api Project is created with identifier {{ param }}",
-            "updated": "A Api Project is updated with identifier {{ param }}",
-            "deleted": "A Api Project is deleted with identifier {{ param }}",
+            "created": "A new Project is created with identifier {{ param }}",
+            "updated": "A Project is updated with identifier {{ param }}",
+            "deleted": "A Project is deleted with identifier {{ param }}",
             "delete": {
-                "question": "Are you sure you want to delete Api Project {{ id }}?"
+                "question": "Are you sure you want to delete Project {{ id }}?"
             },
             "detail": {
-                "title": "Api Project"
+                "title": "Project"
             },
             "name": "Name",
             "description": "Description",
