--- a/apicockpit/src/main/webapp/i18n/en/global.json
+++ b/apicockpit/src/main/webapp/i18n/en/global.json
@@ -7,7 +7,7 @@
             "notifications": "Notifications",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
-                "main": "Entities",
+                "main": "Models",
                 "platformUser": "Platform User",
                 "apiPublisherProfile": "Api Publisher Profile",
                 "apiConsumerProfile": "Api Consumer Profile",
