--- a/apicockpit/src/main/webapp/i18n/en/home.json
+++ b/apicockpit/src/main/webapp/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "title": "Welcome to Open Banking Nigeria API Sandbox",
+        "title": "Welcome to Open Banking Nigeria API <b>{</b> Sandbox<b> }</b>",
         "subtitle": "Working together to build the next generation of API standards for the Nigerian banking and financial industry. Driving innovation and choice for customers, businesses, fintech companies and banks.",
         "createAccount": "Create a free Account",
         "logged": {
